tb-gcp-tr/landingZone/deployment.yaml
# Copyright 2019 The Tranquility Base Authors
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: selfservice
  labels:
    app: selfservice
spec:
  ports:
    - port: 80
      targetPort: 5000
      name: http
    - port: 443
      targetPort: 5000
      name: https
  selector:
    app: selfservice
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: selfservice-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: selfservice
        version: v1
    spec:
      containers:
      - name: selfservice
        image: gcr.io/tranquility-base-images/self-service-portal:v32
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
          - containerPort: 5000
        volumeMounts:
        - name: config-volume
          mountPath: /app/ssp-config.yaml
          subPath: ssp-config.yaml
        - name: google-cloud-key
          mountPath: /var/secrets/google
      volumes:
        - name: config-volume
          configMap:
            name: ssp-config
        - name: google-cloud-key
          secret:
            secretName: ssp-service-account
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: selfservice
spec:
  hosts:
    - "*"
  gateways:
    - mygateway
  http:
    - match:
        - uri:
            exact: /build
        - uri:
            exact: /isalive
        - uri:
            exact: /destroy
      route:
        - destination:
            host: selfservice
            port: 
              number: 80
      corsPolicy:
        allowOrigin:
          - "*"
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - PATCH
          - DELETE
        allowHeaders:
          - content-type
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-telemetry-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 15031
        name: http2-grafana
        protocol: HTTP2
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vts
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - grafana-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana
            port:
              number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: selfservice
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  host: selfservice
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
