tb-gcp-tr/landingZone/houston_service.yaml
# Copyright 2019 The Tranquility Base Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: houstonservice
  labels:
    app: houstonservice
spec:
  ports:
    - port: 3001
      targetPort: 5000
      name: http
    - port: 443
      targetPort: 5000
      name: https
  selector:
    app: houstonservice
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: houstonservice-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: houstonservice
        version: v1
    spec:
      containers:
        - name: houstonservice
          image: gcr.io/eagle-console-resources/tb-houston-service-image:latest
          resources:
            requests:
              cpu: "100m"
          imagePullPolicy: IfNotPresent #Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config-volume
              mountPath: /app/ssp-config.yaml
              subPath: ssp-config.yaml
            - name: google-cloud-key
              mountPath: /var/secrets/google
      volumes:
        - name: config-volume
          configMap:
            name: ssp-config
        - name: google-cloud-key
          secret:
            secretName: ssp-service-account
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 3001
        name: http-houston
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: houstonservice
spec:
  hosts:
    - "*"
  gateways:
    - mygateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: houstonservice
            port:
              number: 3001
      corsPolicy:
        allowOrigin:
          - "*"
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - PATCH
          - DELETE
        allowHeaders:
          - content-type
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: houstonservice
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  host: houstonservice
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
